--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "url": "https://github.com/psu6510110245/git101/issues"
   },
   "homepage": "https://github.com/psu6510110245/git101#readme",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^18.11.9",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
+  }
 }
